# ntk

./: README.md  pyproject.toml
images/batch1/: config.csv
images/batch10/: config.csv
images/batch5/: config.csv
src/ntk/: __init__.py  ntk_expermient.py
